--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "ramsey/uuid": "^4.7",
+        "spatie/laravel-permission": "^5.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
